# scirke

./: .gitignore  Cargo.toml  README.md  scheduling.md
assets/: clipspace.wgsl  schematic_shader.wgsl
bevy_console/: Cargo.toml
bevy_console/src/: console.rs  lib.rs
bevy_egui/: Cargo.toml
bevy_egui/src/: egui_node.rs  lib.rs  render_systems.rs  systems.rs
src/: bevyon.rs  console.rs  input.rs  main.rs  readable_idgen.rs  spmanager.rs
src/schematic/: camera.rs  cursor.rs  infotext.rs  material.rs  mod.rs  netlisting.rs
src/schematic/electrical/: console.rs  mod.rs  netlisting.rs  readable_idgen.rs  spid.rs  spmanager.rs
src/schematic/electrical/devices/: device.rs  mod.rs  port.rs
src/schematic/electrical/label/: mod.rs
src/schematic/electrical/nets/: graph.rs  lineseg.rs  linevertex.rs  mod.rs  port.rs  prune.rs
src/schematic/elements/: devices.rs  lineseg.rs  mod.rs  netlisting.rs  readable_idgen.rs  spid.rs
src/schematic/elements/devices/: device.rs  device_label.rs  mod.rs  port.rs
src/schematic/elements/label/: mod.rs
src/schematic/elements/nets/: graph.rs  lineseg.rs  mod.rs  prune.rs
src/schematic/guides/: background.rs  cursor.rs  grid.rs  mod.rs  origin.rs  origin_marker.rs
src/schematic/tools/: devicespawn.rs  mod.rs  sel.rs  transform.rs  wire.rs
src/schematic/ui/: console.rs  mod.rs  params_editor.rs
