[package]
name = "scirke"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version="0.13.2"}
euclid = {version="0.22.10"}
lyon_tessellation = "1"
serde = "1.0.203"
paprika = { path = "./paprika", features = ["serde"] }
bevy_save = { path = "./bevy_save" }
colored = "2.0"
bevy_egui = "0.27.1"
num = "0.4.3"

[workspace]
members = [
    "paprika",
    "bevy_save",
]
