[package]
name = "scirke"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version="0.14.0"}
euclid = {version="0.22.10"}
lyon_tessellation = "1"
serde = "1.0.203"
paprika = { path = "./paprika", features = ["serde"] }
bevy_save = { path = "./bevy_save" }
bevy_egui = { path = "./bevy_egui" }
colored = "2.0"
num = "0.4.3"
smallvec = "1.13.2"
log = "0.4.22"

[workspace]
members = [
    "paprika",
    "bevy_save",
    "bevy_egui",
]
